# Migration-Tool-Refactor

./: .gitignore  example.py  pyproject.toml
src/argo_migration/: COMPARE_SPREADSHEET_GUIDE.md  MODULARIZATION_SUMMARY.md  cli.py  cli_simple.py
src/argo_migration/api/domo/: README.md  __init__.py  auth.py  data_extractor.py  dataset_manager.py  handler.py  lineage_crawler.py  test_simple.py  utils.py
src/argo_migration/api/snowflake/: __init__.py  auth.py  data_handler.py  handler.py  snowflake.py
src/argo_migration/services/comparison/: __init__.py  data_comparator.py  dataset_comparator.py  row_count_comparator.py  schema_comparator.py
src/argo_migration/services/comparison/bulk_operations/: __init__.py  inventory_runner.py  spreadsheet_runner.py
src/argo_migration/services/comparison/reporting/: __init__.py  debug_exporter.py  executive_summary.py  report_generator.py
src/argo_migration/services/comparison/sampling/: __init__.py  batch_processor.py  query_builder.py  sampler.py
src/argo_migration/services/domo_to_snowflake/: __init__.py  domo_to_snowflake.py  migration_orchestrator.py  table_utils.py
src/argo_migration/utils/: __init__.py  column_matcher.py  common.py  create_stg_sql_file.py  file_logger.py  file_utils.py  gsheets.py  lineage.py
